# ClipboardHijacker

./: .gitignore  README.md
clipboard/: CMakeLists.txt  anti.cpp  anti.h  createService.cpp  createService.h  dropPayload.cpp  dropPayload.h  main.cpp  payload.h
payload/: CMakeLists.txt  main.cpp
